--- a/package.json
+++ b/package.json
@@ -2,41 +2,42 @@
   "name": "device",
   "version": "0.1.0",
   "description": "site with 2 pages",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/Teihden/device"
-  },
-  "main": "build/index.html",
+  "main": "gulpfile.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Teihden/device.git"
+  },
+  "keywords": [
+    "site",
+    "pug",
+    "scss",
+    "javascript"
+  ],
+  "author": "Teihden",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Teihden/device/issues"
+  },
+  "homepage": "https://github.com/Teihden/device#readme",
   "devDependencies": {
-    "autoprefixer": "^10.4.13",
-    "browser-sync": "^2.27.11",
+    "autoprefixer": "^10.4.14",
+    "browser-sync": "^2.29.0",
     "gulp": "^4.0.2",
-    "gulp-concat": "^2.6.1",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
     "gulp-pug-linter": "^1.5.0",
     "gulp-purgecss": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-stylelint": "^13.0.0",
-    "gulp-svg-sprite": "^2.0.1",
     "pug-lint": "^2.6.0",
     "pug-lint-config-clock": "^2.0.0",
     "puglint-stylish": "^1.1.0",
-    "sass": "^1.57.1",
-    "stylelint": "^14.2.0",
-    "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^24.0.0",
-    "stylelint-config-standard-scss": "^3.0.0",
-    "stylelint-order": "^5.0.0",
-    "stylelint-scss": "^4.1.0"
-  },
-  "author": "Teihden",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Teihden/device/issues"
-  },
-  "homepage": "https://github.com/Teihden/device#readme"
+    "sass": "^1.59.3",
+    "stylelint": "^15.3.0",
+    "stylelint-config-recommended-scss": "^9.0.1",
+    "stylelint-config-standard-scss": "^7.0.1"
+  }
 }
