--- a/package.json
+++ b/package.json
@@ -32,12 +32,14 @@
     "gulp-purgecss": "^5.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-stylelint": "^13.0.0",
+    "postcss": "^8.4.21",
     "pug-lint": "^2.6.0",
     "pug-lint-config-clock": "^2.0.0",
     "puglint-stylish": "^1.1.0",
     "sass": "^1.59.3",
     "stylelint": "^15.3.0",
-    "stylelint-config-recommended-scss": "^9.0.1",
-    "stylelint-config-standard-scss": "^7.0.1"
+    "stylelint-config-standard": "^31.0.0",
+    "stylelint-config-standard-scss": "^7.0.1",
+    "stylelint-order": "^6.0.3"
   }
 }
