--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "device",
-  "version": "0.1.0",
+  "version": "0.8.0",
   "description": "site with 2 pages",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "stylelint \"./src/**/*.scss\" --fix --color"
   },
   "repository": {
     "type": "git",
@@ -23,15 +24,18 @@
   },
   "homepage": "https://github.com/Teihden/device#readme",
   "devDependencies": {
+    "@ronilaukkarinen/gulp-stylelint": "^14.1.1",
     "autoprefixer": "^10.4.14",
     "browser-sync": "^2.29.0",
+    "eslint": "^8.36.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "gulp": "^4.0.2",
     "gulp-postcss": "^9.0.1",
     "gulp-pug": "^5.0.0",
     "gulp-pug-linter": "^1.5.0",
     "gulp-purgecss": "^5.0.0",
     "gulp-sass": "^5.1.0",
-    "gulp-stylelint": "^13.0.0",
     "postcss": "^8.4.21",
     "pug-lint": "^2.6.0",
     "pug-lint-config-clock": "^2.0.0",
